--- a/public/css/rndimg.css
+++ b/public/css/rndimg.css
@@ -1,2 +1,2 @@
-.brand{font-family:'Lobster', cursive}figure.image{background-position:center;background-size:cover}#container{padding:20px 10px}
+.brand{font-family:'Lobster', cursive}figure.image{background-position:center;background-size:cover}#container{padding:20px 10px}.footer{padding:2rem 1.5rem 2rem}
 /*# sourceMappingURL=rndimg.css.map */
